tests/paczka1/small_fuzzy/67083128.err
Error in line 1: y6CzWtpIHM5 S657 15,8
Error in line 3: 3jqapWMOFz A312 40,6
Error in line 10: y6CzWtpIHM5 A209 92,0
Error in line 14: y6CzWtpIHM5 S657 40,6
